Make Git exclude files when generating an archive
GitHub generates two archives (a `.zip` and `.tar.gz`) for every
tag/release we create. This is useful as we can provide the links
to those archives to users to download a specific version of our
project.

However, these archives will contain all files the project had
when the tag/release was made. This includes files that aren't of
any use to the users and are most likely going to be deleted
(e.g.: CONTRIBUTING.md).

This commit whitelists the files that aren't useful for users and
informs Git (and thus, GitHub) not to include them when generating
an archive.

Ref: http://git-scm.com/book/en/Customizing-Git-Git-Attributes#Exporting-Your-Repository

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,11 @@
+# Automatically normalize line endings for all text-based file
 * text=auto
+
+# Exclude the following files when generating an archive
+# http://git-scm.com/book/en/Customizing-Git-Git-Attributes#Exporting-Your-Repository
+.gitattributes export-ignore
+archive/README.md export
+bin export-ignore
+CHANGELOG.md export-ignore
+CONTRIBUTING.md export-ignore
+README.md export-ignore
