--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "author": {
-    "name": "Cătălin Mariș"
-  },
+  "author": "Cătălin Mariș <alrraa@gmail.com>",
   "bugs": {
     "url": "https://github.com/alrra/browser-logos/issues"
   },
@@ -13,5 +11,5 @@
     "type": "git",
     "url": "git@github.com:alrra/browser-logos.git"
   },
-  "version": "3.1.3"
+  "version": "3.2.0"
 }
