Exclude `.npmignore` from the archives

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 # Exclude the following files when generating an archive
 # http://git-scm.com/book/en/Customizing-Git-Git-Attributes#Exporting-Your-Repository
 .gitattributes export-ignore
+.npmignore export-ignore
 CHANGELOG.md export-ignore
 CONTRIBUTING.md export-ignore
 bin export-ignore
