Improve & move generate-images.sh in project root

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,6 @@
 .npmignore export-ignore
 CHANGELOG.md export-ignore
 CONTRIBUTING.md export-ignore
-bin export-ignore
 bower.json export-ignore
+generate-images.sh export-ignore
 package.json export-ignore
