--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "authors": [
-    "Cătălin Mariș <alrraa@gmail.com>"
+    "Cătălin Mariș <alrraa@gmail.com> (http://catalinmaris.com/)"
   ],
   "description": "Collection of high resolution web browser logos with transparent backgrounds",
   "homepage": "https://github.com/alrra/browser-logos#readme",
@@ -22,5 +22,5 @@
     "type": "git",
     "url": "https://github.com/alrra/browser-logos.git"
   },
-  "version": "8.6.0"
+  "version": "8.7.0"
 }
