Exclude `scripts/*` from GitHub's language stats
The bash scripts are not representative of the content that
resides in this repository, and are only included in order
to help in the development process.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Ref: https://github.com/github/linguist#using-gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,10 @@ CONTRIBUTING.md export-ignore
 bower.json export-ignore
 package.json export-ignore
 scripts export-ignore
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+# Exclude the following files from GitHub's language statistics
+# https://github.com/github/linguist#using-gitattributes
+
+scripts/* linguist-vendored
