Move `CONTRIBUTING.md` into `.github/`
From https://github.com/blog/2111-issue-and-pull-request-templates:

 " If you're worried about the added clutter in the root directory
   of your project, we also added support for a .github/ folder.
   You can put CONTRIBUTING.md, ISSUE_TEMPLATE.md, and
   PULL_REQUEST_TEMPLATE.md files in .github/ and everything will
   work as expected "

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,10 +9,10 @@
 # https://git-scm.com/book/en/Customizing-Git-Git-Attributes#Exporting-Your-Repository
 
 .gitattributes export-ignore
+.github export-ignore
 .npmignore export-ignore
 .scripts export-ignore
 CHANGELOG.md export-ignore
-CONTRIBUTING.md export-ignore
 bower.json export-ignore
 package.json export-ignore
 
