--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,37 @@
 # For more information about the properties used in
 # this file, please see the EditorConfig documentation:
+#
 # http://editorconfig.org/
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 root = true
 
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 [*]
+
 charset = utf-8
 indent_size = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 [*.md]
+
+# Markdown uses the trailing whitespaces.
+# https://daringfireball.net/projects/markdown/syntax#block
+
 trim_trailing_whitespace = false
 
-[{bower.json,package.json}]
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+[{.travis.yml,{bower,package}.json}]
+
 # The indent size used in the `package.json` file cannot be changed
 # https://github.com/npm/npm/pull/3180#issuecomment-16336516
+
 indent_size = 2
 indent_style = space
