--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,7 @@
 .github export-ignore
 .npmignore export-ignore
 .scripts export-ignore
+.travis.yml export-ignore
 CHANGELOG.md export-ignore
 bower.json export-ignore
 package.json export-ignore
