--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
   "author": "Cătălin Mariș <alrraa@gmail.com> (http://catalinmaris.com/)",
-  "bugs": {
-    "url": "https://github.com/alrra/browser-logos/issues"
-  },
-  "description": "Collection of high resolution web browser logos with transparent backgrounds",
-  "homepage": "https://github.com/alrra/browser-logos#readme",
+  "bugs": "https://github.com/alrra/browser-logos/issues",
+  "description": "High resolution web browser logos",
+  "homepage": "https://github.com/alrra/browser-logos/blob/master/README.md#readme",
   "name": "browser-logos",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:alrra/browser-logos.git"
-  },
-  "scripts": {},
+  "repository": "alrra/browser-logos",
   "version": "35.0.0"
 }
