--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@
 .npmignore export-ignore
 .scripts export-ignore
 .travis.yml export-ignore
+archive.gif export-ignore
 archive/README.md export-ignore
 bower.json export-ignore
 CHANGELOG.md export-ignore
