Exclude Internet Archive links from being verified
For some reason, on Travis CI, checking the `Internet Archive` links
ends up in: "Connection timed out - connect(2) for "web.archive.org"
port 443".

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,7 @@ rvm:
   - 2.2
 
 script:
-  - find . -name "*.md" | xargs awesome_bot --allow-dupe --allow-redirect --set-timeout 30
+  - find . -name "*.md" | xargs awesome_bot --allow-dupe
+                                            --allow-redirect
+                                            --set-timeout 150
+                                            --white-list "https://web.archive.org/web"
