--- a/.editorconfig
+++ b/.editorconfig
@@ -28,7 +28,7 @@ trim_trailing_whitespace = false
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-[{.travis.yml,{bower,package}.json}]
+[{.travis.yml,package.json}]
 
 # The indent size used in the `package.json` file cannot be changed
 # https://github.com/npm/npm/pull/3180#issuecomment-16336516
