Move "check links" related code into its own file

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,4 @@ rvm:
   - 2.2
 
 script:
-  - find . -name "*.md" | xargs awesome_bot --allow-dupe
-                                            --allow-redirect
-                                            --set-timeout 150
-                                            --white-list "https://web.archive.org/web"
+  - ./scripts/check-links.sh
