--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "name": "browser-logos",
   "private": true,
   "repository": "alrra/browser-logos",
-  "version": "39.2.2"
+  "keywords":["Logo", "browser", "archive"],
+  "version": "39.2.2",
+  "license": " none",
+  "contributors": ["Alrra"],
+  "engines": "None",
+  "dependencies": "None"
+  
 }
