--- a/src/web/package.json
+++ b/src/web/package.json
@@ -1,14 +1,16 @@
 {
   "bugs": "https://github.com/alrra/browser-logos/issues",
-  "description": "Web browser logo",
+  "description": "Web (f.k.a. Epiphany) browser logo",
   "homepage": "https://github.com/alrra/browser-logos",
   "keywords": [
     "browser-logos",
     "logo",
+    "epiphany",
+    "epiphany-logo",
     "web",
     "web-logo"
   ],
   "name": "@browser-logos/web",
   "repository": "alrra/browser-logos",
-  "version": "1.0.1"
+  "version": "1.1.0"
 }
