Publish `Cờ-Rôm+` logo on `npm`

--- a/src/archive/cờ-rôm+/package.json
+++ b/src/archive/cờ-rôm+/package.json
@@ -8,7 +8,7 @@
     "cờ-rôm+",
     "cờ-rôm+-logo"
   ],
-  "name": "@browser-logos/cờ-rôm+",
+  "name": "@browser-logos/co-rom",
   "repository": "alrra/browser-logos",
   "version": "1.0.0"
 }
