Tweak and further optimize `electron.svg`
Also, regenerate the PNG images based on the SVG.

--- a/src/electron/package.json
+++ b/src/electron/package.json
@@ -1,6 +1,6 @@
 {
   "bugs": "https://github.com/alrra/browser-logos/issues",
-  "description": "Electron browser logo",
+  "description": "Electron logo",
   "homepage": "https://github.com/alrra/browser-logos",
   "keywords": [
     "browser-logos",
