Update `Firefox Developer Edition` logo
* Move old `Firefox Developer Edition` logo into the archive.
* Add new `Firefox Developer Edition` logo.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Ref:

 * https://www.mozilla.org/en-US/firefox/35.0a2/auroranotes/
 * https://user-images.githubusercontent.com/1223565/30656077-80079aa2-9e3b-11e7-9365-b91a9bbd41b4.png
 * https://user-images.githubusercontent.com/1223565/30656076-7ffe9628-9e3b-11e7-87d3-841bd6165a31.png

Fix #124

--- a/src/archive/firefox-developer-edition_35-56/package.json
+++ b/src/archive/firefox-developer-edition_35-56/package.json
@@ -1,6 +1,6 @@
 {
   "bugs": "https://github.com/alrra/browser-logos/issues",
-  "description": "Firefox Developer Edition browser logo",
+  "description": "Firefox Developer Edition v35-56 browser logo",
   "homepage": "https://github.com/alrra/browser-logos",
   "keywords": [
     "browser-logos",
@@ -8,7 +8,7 @@
     "firefox-developer-edition",
     "firefox-developer-edition-logo"
   ],
-  "name": "@browser-logos/firefox-developer-edition",
+  "name": "@browser-logos/firefox-developer-edition_35-56",
   "repository": "alrra/browser-logos",
-  "version": "2.0.0"
+  "version": "1.0.0"
 }
