--- a/src/firefox-focus/package.json
+++ b/src/firefox-focus/package.json
@@ -1,14 +1,14 @@
 {
   "bugs": "https://github.com/alrra/browser-logos/issues",
-  "description": "Focus browser logo",
+  "description": "Firefox Focus browser logo",
   "homepage": "https://github.com/alrra/browser-logos",
   "keywords": [
     "browser-logos",
     "logo",
-    "focus",
-    "focus-logo"
+    "firefox-focus",
+    "firefox-focus-logo"
   ],
-  "name": "@browser-logos/focus",
+  "name": "@browser-logos/firefox-focus",
   "repository": "alrra/browser-logos",
-  "version": "2.1.0"
+  "version": "1.0.0"
 }
