--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "devDependencies": {
+    "@octokit/rest": "^16.16.4",
+    "inquirer": "^6.2.2",
+    "listr": "^0.14.3",
+    "listr-input": "^0.1.3",
+    "shelljs": "^0.8.3"
+  },
   "name": "browser-logos",
   "private": true,
+  "scripts": {
+    "release": "./scripts/release.js"
+  },
   "version": "47.0.0"
 }
