🏗 Specify what entries `npm` should include rather than exclude
Use the `files` field in the `package.json` file instead of the
`.npmignore` file to specify what entries `npm` should include
rather than exclude.

This change makes it easier to not include unneeded files in the
`npm` package.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

See also: https://docs.npmjs.com/files/package.json#files

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "listr-input": "^0.1.3",
     "shelljs": "^0.8.3"
   },
+  "files": [
+    "src/!(browser-logos.gif|main-desktop-browser-logos.png|main-mobile-browser-logos.png|old-browser-logos.gif)"
+  ],
   "name": "browser-logos",
   "private": true,
   "scripts": {
