--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "inquirer": "^6.5.1",
     "listr": "^0.14.3",
     "listr-input": "^0.1.3",
+    "markdown-link-check": "^3.7.3",
     "shelljs": "^0.8.3"
   },
   "files": [
@@ -12,6 +13,7 @@
   "name": "browser-logos",
   "private": true,
   "scripts": {
+    "check-links": "./scripts/check-links.sh",
     "prepare-for-publishing": "./scripts/prepare-for-publishing.js",
     "release": "./scripts/release.js"
   },
