--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-language:
-  - node_js
+language: node_js
 
 node_js:
   - node
@@ -16,5 +15,9 @@ notifications:
     on_failure: always
     on_success: never
 
+os: linux
+
 script:
   - npm run check-links
+
+version: ~> 1.0
