🏗 Move from Travis CI to using GitHub Actions
Ref: https://help.github.com/en/github/automating-your-workflow-with-github-actions

--- a/.editorconfig
+++ b/.editorconfig
@@ -19,7 +19,7 @@ trim_trailing_whitespace = true
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-[{.travis.yml,package.json}]
+[*.{json,yml}]
 
 indent_size = 2
 indent_style = space
