--- a/.gitattributes
+++ b/.gitattributes
@@ -15,7 +15,9 @@
 .editorconfig export-ignore
 .gitattributes export-ignore
 .github export-ignore
+.markdownlint.json export-ignore
 .travis.yml export-ignore
+changelogs export-ignore
 scripts export-ignore
 src/browser-logos.gif export-ignore
 src/main-desktop-browser-logos.png export-ignore
