--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: lts/*
 
       - name: Install dependencies
         run: npm install
